--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "SILENT-SOBX-MD",
-  "description": "ᴊᴀᴠᴀsᴄʀɪᴘᴛ ᴡʜᴀᴛsᴀᴘᴘ ʙᴏᴛ ᴄʀᴇᴀᴛᴇᴅ ʙʏ sɪʟᴇɴᴛʟᴏᴠᴇʀ⁴³²",
+  "name": "𓊈♛𝚩𝐋𝚫𝐂𝐊 𝐆𝚪𝚵𝐘 𝐋𝚵𝚯𝚴𝚰𝐃𝚫𝐒♛𓊉",
+  "description": "𝐷𝑜𝑛'𝑡 𝑝𝑙𝑎𝑦❄️𝑤ℎ𝑒𝑛 𝑡ℎ𝑒𝑟𝑒'𝑠 𝑛𝑜 𝑙𝑒𝑐ℎ𝑒🌹",
   "logo": "https://telegra.ph/file/2a06381b260c3f096a612.jpg",
   "keywords": ["bot"],
   "success_url": "/",
