--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SILENT-SOBX-MD",
+  "name": "𓊈♛𝚩𝐋𝚫𝐂𝐊 𝐆𝚪𝚵𝐘 𝐋𝚵𝚯𝚴𝚰𝐃𝚫𝐒♛𓊉",
   "version": "1.0.0",
   "description": "A WhatsApp bot created using Node.js",
   "main": "index.js",
